# gigarijndael

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: performance_comparison.py
gigarijndael/: __init__.py  aes.py  rijndael.py
gigarijndael/encryption/: __init__.py  bits.py  block.py  encrypter.py  matrix.py  sbox.py  word.py
gigarijndael/finite_fields/: field.py  polynomial.py
tests/: conftest.py  test_aes.py  test_rijndael.py
tests/test_encryption/: test_bits.py  test_encrypter.py  test_matrix.py  test_sbox.py  test_word.py
tests/test_finite_fields/: test_field.py  test_polynomial.py
