[tool.poetry]
name = "gigarijndael"
version = "0.1.0"
description = ""
authors = ["Aleksey Averin <averin-av@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.10.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
