[tool.poetry]
name = "gigarijndael"
version = "0.1.0"
description = "Python implementation of Rijndael cipher with GF(2^32) extensions"
authors = ["Aleksey Averin <averin-av@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alex-averin/gigarijndael"
keywords = ["rijndael", "aes", "cryptography", "galois-field", "encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography"
]

[tool.poetry.dependencies]
python = "^3.13"
more-itertools = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.10.0"

[tool.black]
line-length = 100
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
